Bug 162295 - FILEOPEN DOCX: slow handling with many shapes and sections with headers/footers
Summary: FILEOPEN DOCX: slow handling with many shapes and sections with headers/footers
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.2.7 target:24...
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-01 13:10 UTC by Miklos Vajna
Modified: 2024-09-02 08:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Simplified version of the problematic document (314.59 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-08-01 13:10 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-08-01 13:10:41 UTC
Created attachment 195637 [details]
Simplified version of the problematic document

Steps to reproduce the problem:

1) Open the attached bugdoc.

2) Look at the time required to open the document.

Actual result: around 9313 ms for me locally.

Expected result: around 5s is where users start to complain.

Note that the document has 150 sections and 891 shapes, which explains the slowness to some extent.

(This is a public version of the original document I have at hand, but hopefully the important property of the doc is not lost.)
Comment 1 Commit Notification 2024-08-02 08:37:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cfd3b14fd4e1ee889dd356523e5cdaa639786d37

tdf#162295 DOCX import: optimize the check if the header/footer is empty

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-08-06 07:56:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf22d66c5837f108296b37bc98f17ee96869a7ef

Related: tdf#162295 DOCX import: optimize copying headers/footers

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-08-19 19:41:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6cf67700c1131fb5399455380df91cc8704cd4d1

Related: tdf#162295 DOCX import: optimize copying headers/footers

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-08-20 10:25:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/08531dc6d94a4cd1b591bc6e72bff753605746d3

Related: tdf#162295 DOCX import: optimize copying headers/footers

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-09-02 08:45:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-6":

https://git.libreoffice.org/core/commit/65013585b7022382eab21376adc0b978a33f80fb

Related: tdf#162295 DOCX import: optimize copying headers/footers

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.