sw/inc/cmdid.h
@@ -678,6 +678,7 @@ class SwUINumRuleItem;
 #define FN_UNO_GRAPHIC_PREVIEW              (FN_EXTRA2 + 130)
 #define FN_UNO_LINEBREAK (FN_EXTRA2 + 131)
 #define FN_UNO_CONTENT_CONTROL (FN_EXTRA2 + 132)
+#define FN_UNO_IS_CONTENT_EMPTY  (FN_EXTRA2 + 133)
 
 // Area: Help
 // Region: Traveling & Selection
